# partial_kgfn

./: LICENSE  README.md  pyproject.toml  requirements.txt
partial_kgfn/: run_one_trial.py
partial_kgfn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
partial_kgfn/acquisition/: full_kgfn.py  partial_kgfn.py  tsfn.py
partial_kgfn/experiments/: GPs1_runner.py  GPs2_runner.py  ackleyS_runner.py  ackmat_runner.py  freesolv3_runner.py  manufacturing_runner.py  pharmaceutical_runner.py
partial_kgfn/models/: dag.py  decoupled_gp_network.py
partial_kgfn/optim/: __init__.py  discrete_kgfn_optim.py
partial_kgfn/test_functions/: GPs1.py  GPs2.py  ack_mat.py  ackley_sin.py  freesolv3.py  freesolv_NN_rep3dim.csv  manufacter_gp.py  pharmaceutical.py
partial_kgfn/utils/: EIFN_optimize_acqf.py  construct_obs_set.py  posterior_mean.py
